<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fregments.HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/black"
            android:orientation="horizontal"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:weightSum="4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                app:cardBackgroundColor="#00000000"
                app:cardCornerRadius="10dp"
                app:cardElevation="10dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="vertical"
                    android:weightSum="4">

                    <ImageButton
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_gravity="top|center"
                        android:layout_marginBottom="5dp"
                        android:background="@drawable/button_background"
                        android:elevation="20dp"
                        android:scaleType="center"
                        android:src="@drawable/videocam_24px"
                        android:contentDescription="@string/content_description"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/new_meeting"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textSize="12sp" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                app:cardBackgroundColor="#00000000"
                app:cardCornerRadius="10dp"
                app:cardElevation="10dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="vertical"
                    android:weightSum="4">

                    <ImageButton
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_gravity="top|center"
                        android:layout_marginBottom="5dp"
                        android:background="@drawable/button_background"
                        android:elevation="20dp"
                        android:scaleType="center"
                        android:src="@drawable/add_box_24px"
                        android:contentDescription="@string/content_description"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/join_meeting"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textSize="12sp" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                app:cardBackgroundColor="#00000000"
                app:cardCornerRadius="10dp"
                app:cardElevation="10dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="vertical"
                    android:weightSum="4">

                    <ImageButton
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_gravity="top|center"
                        android:layout_marginBottom="5dp"
                        android:background="@drawable/button_background"
                        android:elevation="20dp"
                        android:scaleType="center"
                        android:src="@drawable/videocam_24px"
                        android:contentDescription="@string/content_description"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/schedule"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textSize="12sp" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                app:cardBackgroundColor="#00000000"
                app:cardCornerRadius="10dp"
                app:cardElevation="10dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="vertical"
                    android:weightSum="4">

                    <ImageButton
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_gravity="top|center"
                        android:layout_marginBottom="5dp"
                        android:background="@drawable/button_background"
                        android:elevation="20dp"
                        android:scaleType="center"
                        android:src="@drawable/videocam_24px"
                        android:contentDescription="@string/content_description" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/share_screen"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textSize="12sp" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>

        <TextView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/create_or_join_a_meeting"
            android:textAlignment="center"
            android:gravity="center"
            android:textSize="28sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>